--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-25  higepon  <higepon@users.sourceforge.jp>
+
+        * Segments.cpp: システムコール周りを徐々に再構成中
+
 2004-02-24  higepon  <higepon@users.sourceforge.jp>
 
         * include/Process.h (class Scheduler): findProcess()
