--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-04  higepon  <higepon@users.sourceforge.jp>
+
+        * FDCDriver.cpp: スケジューラをrunq × 1, waitq × 1 の単純なラウンドロビンのスケジューラにした。
+
 2004-03-02  higepon  <higepon@users.sourceforge.jp>
 
         * syscalls.cpp : スケジューラが激しく不安定だが他のことをやることにする。
