--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-07  higepon  <higepon@users.sourceforge.jp>
+
+        * MonaApplicationの名前引数をやめた。
+
 2004-03-06  higepon  <higepon@users.sourceforge.jp>
 
         * kernel.cpp: スレッドスイッチのバグを１つつぶす。
