--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-09  higepon  <higepon@users.sourceforge.jp>
 
+        * user/userlib/userlib.cpp (exist): Message::exist()’Ç‰Á
+
+        * fat_write.exe‚ª“®ì‚·‚é‚æ‚¤‚É‚È‚Á‚½¡
+
         * kernel.cpp : fat_write.exe‚ğ‰ü‘•’†‚Ì‚½‚ß‚Ü‚Æ‚à‚É“®‚«‚Ü‚¹‚ñB
 
 2004-03-08  higepon  <higepon@users.sourceforge.jp>
