new fat_write.exe

--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-09  higepon  <higepon@users.sourceforge.jp>
 
+        * fat_write.exeがファイルを上書きできるようになった。
+
         * user/userlib/userlib.cpp (exist): Message::exist()追加
 
         * fat_write.exeが動作するようになった｡
