--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-19  higepon  <higepon@users.sourceforge.jp>
+
+        * test_higepon.cpp : KEventクラス追加
+
 2004-03-18  higepon  <higepon@users.sourceforge.jp>
 
         * kernel.cpp (execSysConf): サーバーを外部ファイルを読み込んで起動(by Tinoさん)
