--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-22  higepon  <higepon@users.sourceforge.jp>
+
+        * user/userlib/userlib.cpp: syscall_mthread_create, joinを生ポインタからID制にした｡
+
+        * IDManager.cpp: ID管理用のクラスを追加｡
+
 2004-03-19  higepon  <higepon@users.sourceforge.jp>
 
         * test_higepon.cpp : KEventクラス追加
