--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-24  higepon  <higepon@users.sourceforge.jp>
+
+        * Process.cpp (kill): プロセス終了時に物理ページの返却を行う
+
+        * PageManager.cpp: VRAMのマッピングのロジックミスを修正
+
 2004-03-23  higepon  <higepon@users.sourceforge.jp>
 
         * FDのモーターOFFの制御をまじめに｡
