--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-25  higepon  <higepon@users.sourceforge.jp>
+
+        * kernel.cpp (loadServer): MONA.CFGできどうされるサーバーはINITプロセスにサーバー起動完了メッセージを送信しなければいけなくなった｡
+
+        * Process.cpp (lookupMainThread): プロセス名からメインThreadのtidを取得で切るようにした。
+
+        * uselib: Message::lookupMainThread関数追加
+
 2004-03-24  higepon  <higepon@users.sourceforge.jp>
 
         * FDCDriver.cpp: ディスク交換検出APIの改良
