--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-13  shadow  <shadowin@users.sourceforge.jp>
+
+        * user/userlib/monalibc.cpp & .h strncpy2’Ç‰Á
+
 2004-03-27  higepon  <higepon@users.sourceforge.jp>
 
         * user/userlib/userlib.cpp: inp/outp 8/16/32‚ðŽÀ‘•
