--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  higepon  <higepon@users.sourceforge.jp>
+
+        * kernel.cpp (startKernel): MemoryMap‚Ìd—l•ÏX
+
 2004-04-01  higepon  <higepon@users.sourceforge.jp>
 
         * Makefile : make->$(MAKE)
