--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-14  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/PageManager.cpp (allocatePageTable): ページテーブルをプールから割り当てるように変更
+
 2004-04-13  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/fat.cpp (initialize): バグ修正(Yui_Nekoさん指摘による)
