--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,14 @@
+2004-04-15  higepon  <higepon@users.sourceforge.jp>
+
+        * include/sys/Map.h: デストラクタ作成
+
+        * include/sys/List.h (List): HListのメモリリークの原因となっていたのでデストラクタを作成
+
+        * src/kernel/Process.h (class Process): スタック開始アドレスを偶数にした。
+
+        * src/kernel/MemoryManager.cpp: mallocをalign8に調整
+                                        free時にメモリ破壊をチェック(DEBUG_BUILD時のみ)
+
 2004-04-14  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/PageManager.cpp (allocatePageTable): ページテーブルをプールから割り当てるように変更
