--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,10 +1,12 @@
-2004-03-28  shadow  <shadowin@users.sourceforge.jp>
+2004-04-15  shadow  <shadowin@users.sourceforge.jp>
 
         * src/lib/monapi/Keys.cpp ToChar追加
 
         * include/monapi/Keys.h Key追加。ToChar追加。
 
         * include/sys/types.h KeyInfo追加。KeyBoardManager.hからKeyInfo削除。
+
+        * 1linesh 右矢印、左矢印対応。
 
 2004-04-15  higepon  <higepon@users.sourceforge.jp>
 
@@ -32,6 +34,10 @@
         * src/servers/shell/main.cpp: Keysに対応
 
         * include/monapi/Keys.h (class Keys): Keys列挙追加
+
+2004-04-13  shadow  <shadowin@users.sourceforge.jp>
+
+        * 1linesh 追加
 
 2004-04-11  higepon  <higepon@users.sourceforge.jp>
 
