--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-17  shadow  <shadowin@users.sourceforge.jp>
+
+        * src/lib/monapi/Keys.cpp: IsToChar追加
+
+        * include/monapi/Keys.h: Key追加。IsToChar追加
+
+        * 1linesh: bug fix
+
 2004-04-16  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/mouse/main.cpp: マウスの情報送信・受信を3回から1回に削減
@@ -6,13 +14,13 @@
 
 2004-04-15  shadow  <shadowin@users.sourceforge.jp>
 
-        * src/lib/monapi/Keys.cpp ToChar追加
+        * src/lib/monapi/Keys.cpp: ToChar追加
 
-        * include/monapi/Keys.h Key追加。ToChar追加。
+        * include/monapi/Keys.h: Key追加。ToChar追加
 
-        * include/sys/types.h KeyInfo追加。KeyBoardManager.hからKeyInfo削除。
+        * include/sys/types.h: KeyInfo追加。KeyBoardManager.hからKeyInfo削除
 
-        * 1linesh 右矢印、左矢印対応。
+        * 1linesh: 右矢印、左矢印対応
 
 2004-04-15  higepon  <higepon@users.sourceforge.jp>
 
@@ -43,7 +51,7 @@
 
 2004-04-13  shadow  <shadowin@users.sourceforge.jp>
 
-        * 1linesh 追加
+        * 1linesh: 追加
 
 2004-04-11  higepon  <higepon@users.sourceforge.jp>
 
