--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,13 @@
 2004-04-17  higepon  <higepon@users.sourceforge.jp>
 
+        * warningつぶし
+
+2004-04-17  shadow  <shadowin@users.sourceforge.jp>
+
+        * 1linesh: コマンド履歴機能追加
+
+2004-04-17  higepon  <higepon@users.sourceforge.jp>
+
         * src/kernel/elf.cpp (load): セクションヘッダを参照して.bssをゼロクリア
 
 2004-04-17  shadow  <shadowin@users.sourceforge.jp>
