--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-19  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/reversi/ReversiForm.cpp (Observer): resetƒ{ƒ^ƒ“‚Â‚¯‚½‚è
+
 2004-04-17  higepon  <higepon@users.sourceforge.jp>
 
         * warning‚Â‚Ô‚µ
