--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -2,6 +2,10 @@
 
         * src/servers/mouse/main.cpp: 原点のゴミを除去
 
+        * include/gui/System/Drawing/Bitmap.h: コンストラクタでファイル名を指定してBMPを読み込み
+
+        * include/gui/System/Drawing/Graphics.h: DrawImage()実装
+
         * src/lib/gui/System/Mona/Forms/Control.cpp (OnTextChanged): 自動再描画
 
         * src/lib/gui/System/Mona/Forms/Form.cpp: ウインドウの閉じるボタンをキャンセルできるようにした
@@ -9,6 +13,8 @@
         * apps/gui/reversi/ReversiForm.cpp: label1の再描画処理を正常化
 
         * apps/gui/reversi/ReversiForm.cpp (InitializeComponent): GUIビルダで自動生成できないコードを除去
+
+        * samples/gui/bitmap: BMP表示のサンプル
 
 2004-04-19  higepon  <higepon@users.sourceforge.jp>
 
