Modified Files: 	include/gui/System/Mona/Forms/Control.h 	src/lib/gui/System/Mona/Forms/Control.cpp Added Files: 	apps/gui/noiz2bg/Form1.cpp apps/gui/noiz2bg/Makefile 	apps/gui/noiz2bg/dependencies apps/gui/noiz2bg/noiz2bg.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-24  tino  <tino@users.sourceforge.jp>
+
+        * include/gui/System/Mona/Forms/Control.h: Visibleプロパティ
+
+        * apps/gui/noiz2bg: noiz2bgをMonaGUIに移植
+
 2004-04-23  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/mouse/main.cpp: マウスカーソルの初期位置を画面中央.
