Modified Files: 	ChangeLog apps/non-gui/jpegdemo/Makefile 	apps/non-gui/jpegdemo/dependencies src/lib/Makefile 	src/lib/gui/Makefile src/lib/monalibc/Makefile 	src/lib/monapi/Makefile Added Files: 	include/jpegls.h src/lib/jpegls/Makefile 	src/lib/jpegls/dct_tab src/lib/jpegls/dependencies 	src/lib/jpegls/jpegls.cpp Removed Files: 	apps/non-gui/jpegdemo/dct_tab apps/non-gui/jpegdemo/jpegls.cpp 	apps/non-gui/jpegdemo/jpegls.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -6,6 +6,10 @@
 
         * apps/gui/fire: NWSOSから移植
 
+        * bin/root/STARTING.JPG: jpegdemoのtext.hexをファイル化
+
+        * src/lib/jpegls: jpegdemoのデコードエンジンをライブラリ化
+
 2004-04-23  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/mouse/main.cpp: マウスカーソルの初期位置を画面中央.
