--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-24  tino  <tino@users.sourceforge.jp>
+
+        * apps/gui/ps/Form1.cpp: 更新ボタンを追加
+
 2004-04-24  higepon  <higepon@users.sourceforge.jp>
 
         * .cvsignoreをいろいろと追加。
