Modified Files: 	ChangeLog bin/root/MONA.CFG src/servers/gui/main.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -4,6 +4,8 @@
 
         * src/servers/mouse/main.cpp: マウスポインタを描画するかどうかを制御
 
+        * src/servers/gui/main.cpp: 壁紙をサポート (MONA.CFGで指定可能)
+
 2004-04-25  higepon  <higepon@users.sourceforge.jp>
 
         * *.asmでsection .text指定。 NFLAGS= -f elf, -f win32の振り分け
