Modified Files: 	ChangeLog samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/.cvsignore samples/gui/button/.cvsignore 	samples/gui/label/.cvsignore samples/non-gui/Makefile 	samples/non-gui/hello/.cvsignore 	samples/non-gui/kanji/.cvsignore Removed Files: 	samples/gui/bitmap/dependencies 	samples/gui/button/dependencies samples/gui/label/dependencies 	samples/non-gui/hello/dependencies 	samples/non-gui/kanji/dependencies

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-25  tino  <tino@users.sourceforge.jp>
+
+        * configure: コンパイル手順を表示
+
+        * Makefile.in: make distcleanでdependenciesを削除
+
 2004-04-25  higepon  <higepon@users.sourceforge.jp>
 
         * Yui_Nekoさんの monaelf, tubeを追加
