--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-26  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/mouse/main.cpp (class MouseServer): マウスサーバー書き直し
+
 2004-04-25  tino  <tino@users.sourceforge.jp>
 
         * configure: コンパイル手順を表示
