--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-04-26  higepon  <higepon@users.sourceforge.jp>
 
+        * Makefile.in (image): Yui_Nekoさんのmonaelf.exeでELF/SVRのファイルサイズを小さくするようにしただいぶ節約!
+
         * src/servers/mouse/main.cpp (class MouseServer): マウスサーバー書き直し
 
 2004-04-25  tino  <tino@users.sourceforge.jp>
