--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-04-27  higepon  <higepon@users.sourceforge.jp>
 
+        * 間引くのをやめた。
+
         * src/servers/mouse/main.cpp (MessageLoop): マウスカーソル描画を間引いてみた。
 
 2004-04-26  higepon  <higepon@users.sourceforge.jp>
