Modified Files: 	ChangeLog Makefile.in apps/gui/2chAA/Makefile 	apps/gui/fire/Makefile apps/gui/launcher/Makefile 	apps/gui/noiz2bg/Makefile apps/gui/ps/Makefile 	apps/gui/reversi/Makefile apps/non-gui/clock/Makefile 	apps/non-gui/jpegdemo/Makefile apps/non-gui/nic/ne2k/Makefile 	apps/non-gui/noiz2bg/Makefile apps/non-gui/reversi/Makefile 	apps/non-gui/waba/Makefile bin/root/.cvsignore 	bin/root/APPS/.cvsignore samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/kernel/Makefile src/servers/1linesh/Makefile 	src/servers/gui/Makefile src/servers/key/Makefile 	src/servers/mouse/Makefile src/servers/shell/Makefile 	tools/fat_write/Makefile tools/monaelf/Makefile Added Files: 	bin/Makefile

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-27  tino  <tino@users.sourceforge.jp>
+
+        * Makefile.in: イメージ作成を分離
+
+        * bin/Makefile: イメージ作成
+
+        * その他Makefile: stripの後にmonaelfを適用するようにした
+
 2004-04-27  higepon  <higepon@users.sourceforge.jp>
 
         * Gakuさんの修正分: fat.cpp, fat.h
