Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/clock/Makefile apps/non-gui/jpegdemo/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/tube/Makefile 	apps/non-gui/waba/Makefile bin/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/hello/Makefile 	samples/non-gui/kanji/Makefile src/servers/1linesh/Makefile 	src/servers/gui/Makefile src/servers/key/Makefile 	src/servers/mouse/Makefile src/servers/shell/Makefile

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -4,7 +4,7 @@
 
         * bin/Makefile: イメージ作成, fat_writeで--mbr, --mkdirを使用
 
-        * その他Makefile: stripの後にmonaelfを適用するようにした
+        * その他Makefile: stripの後にmonaelfを適用, install前にディレクトリ作成
 
         * include/sys/types.h: PsInfoにpathを追加
 
@@ -25,6 +25,10 @@
         * tools/fat_write/fat.cpp: エントリ拡張で落ちる問題を修正
 
         * bin/fat_template.img: フォーマット直後のものに差し替え (fat_writeの--mkdirを使用するため)
+
+        * bin/root/APPS: インストール時に作成するため削除
+
+        * bin/root/SERVERS: インストール時に作成するため削除
 
 2004-04-27  higepon  <higepon@users.sourceforge.jp>
 
