--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,13 @@
+2004-04-28  shadow  <shadowin@users.sourceforge.jp>
+
+        * include/monapi/Keys.h: keymap追加
+
+        * src/lib/monapi/Keys.cpp: keymap追加
+
+        * src/servers/key/KeyboardManager.h: SetKeyMap追加
+
+        * src/servers/key/KeyboardManager.cpp: SetKeyMap追加
+
 2004-04-28  tino  <tino@users.sourceforge.jp>
 
         * env/*.env: CXXFLAGSに-DMONAを追加
@@ -256,10 +266,6 @@
 2004-04-17  higepon  <higepon@users.sourceforge.jp>
 
         * warningつぶし
-
-2004-04-17  shadow  <shadowin@users.sourceforge.jp>
-
-        * 1linesh: コマンド履歴機能追加
 
 2004-04-17  higepon  <higepon@users.sourceforge.jp>
 
